# axum-postgresql-boilerplate

./: .env.example  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
